<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.kokomusoft.panticul.fragments.ContactFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/contactTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/importantText"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/contact_section_title"/>

            <TextView
                android:id="@+id/contactPresentationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/contactTitle"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                style="@style/textBlue"
                android:text="@string/contact_presentation_text"/>

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contactPresentationText"
                android:layout_marginBottom="15dp"
                android:inputType="textPersonName"
                android:hint="@string/edit_text_name_placeholder"
                android:textColor="@color/main_color"
                android:ems="10"
                android:layout_gravity="center"/>

            <Spinner
                android:id="@+id/subjectSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameEditText"
                android:textColor="@color/main_color"
                android:prompt="@string/spinner_subject_type_text"
                android:entries="@array/contact_subject_type_list"/>

            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/subjectSpinner"
                android:inputType="textMultiLine"
                android:textColor="@color/main_color"
                android:lines="5"
                android:ems="10"
                android:hint="@string/edit_text_message_placeholder"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/sendButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/messageEditText"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/contact_send_button_text"/>


        </RelativeLayout>

        </ScrollView>




</FrameLayout>
